syntax = "proto3";
option go_package = "example.com/m/hello";

message HelloRequest {
  string name = 1;
}
message HelloResponse {
  string message = 1;
}

service HelloService {
  rpc SayHello (HelloRequest) returns (HelloResponse);
}
